<resources>
    <string name="app_name">Calculator App</string>
    <string name="title">Calculator</string>
    <string name="inputText">Enter a Number</string>
    <string name="Addition">Addition</string>
    <string name="Subtraction">Subtraction</string>
    <string name="Multiplication">Multiplication</string>
    <string name="Division">Division</string>
    <string name="result">Result:</string>
    <string name="result_text">Result of %1$s: %2$d</string>
</resources>